@@ -1,3 +1,9 @@
+2015-04-02  Mike Frysinger  <vapier@gentoo.org>
+
+	* interp.c (lookup_hash): Change SIGILL to GDB_SIGNAL_ILL.
+	(sim_resume): Change SIGBUS/SIGSEGV to GDB_SIGNAL_BUS, SIGILL to
+	GDB_SIGNAL_ILL, and SIGTRAP to GDB_SIGNAL_TRAP.
+
 2015-04-01  Mike Frysinger  <vapier@gentoo.org>
 
 	* interp.c (sim_set_profile, sim_set_profile_size): Delete.
